--- a/AplikacjaAndroid/Controls/PasswordEntry/PasswordEntry.xaml
+++ b/AplikacjaAndroid/Controls/PasswordEntry/PasswordEntry.xaml
@@ -5,8 +5,7 @@
              xmlns:local="clr-namespace:AplikacjaAndroid">
     <Grid ColumnDefinitions="*,Auto"
           Padding="0"
-          HeightRequest="48"
-          BackgroundColor="White"
+          HeightRequest="48"          
           Margin="0,10"     
           VerticalOptions="Center">
         <Entry Grid.Column="0"
@@ -26,11 +25,11 @@
                          VerticalOptions="Center"
                          WidthRequest="35"
                          HeightRequest="35"
-                         Scale="0.56">
+                         Scale="0.47">
                 <ImageButton.Source>
                     <FontImageSource Glyph="{Binding EyeIconGlyph, Source={RelativeSource AncestorType={x:Type local:PasswordEntry}}}"
                                      FontFamily="MaterialIcons"
-                                     Color="Black"/>
+                                     Color="{AppThemeBinding Light={DynamicResource Black},Dark= {DynamicResource White}}"/>
                 </ImageButton.Source>
             </ImageButton>
         </AbsoluteLayout>
