--- a/AplikacjaAndroid/Modules/Books/BooksView.xaml
+++ b/AplikacjaAndroid/Modules/Books/BooksView.xaml
@@ -23,46 +23,70 @@
                             SelectedItem="{Binding SelectedGenre}" />
                 </HorizontalStackLayout>
             </ScrollView>
-            
         </Border>
         <CollectionView ItemsSource="{Binding Books}" Grid.Row="1" RemainingItemsThreshold="1" RemainingItemsThresholdReachedCommand="{Binding LoadNextPageCommand}">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
-                    <Border  Stroke="#ccc" Margin="10" Padding="10" StrokeShape="RoundRectangle 10">
-                        <Grid ColumnDefinitions="Auto,*,Auto,Auto">
-                            <Grid.GestureRecognizers>
-                                <TapGestureRecognizer
-                    Command="{Binding BindingContext.GoToDetailsViewCommand, Source={RelativeSource AncestorType={x:Type ContentPage}}}"
-                    CommandParameter="{Binding .}" />
-                            </Grid.GestureRecognizers>
+                    <Grid Shadow="2,2,1,gray">
+                        <Border Stroke="#ccc" Margin="10" Padding="10" StrokeShape="RoundRectangle 10" 
+                            BackgroundColor="{AppThemeBinding Dark={DynamicResource BackgroundDarkMode},Light={DynamicResource BackgroundLightMode}}"
+                            Shadow="2,2,2,Gray" >
+                            <Grid ColumnDefinitions="Auto,*,Auto,Auto,Auto,Auto">
+                                <Grid.GestureRecognizers>
+                                    <TapGestureRecognizer Command="{Binding BindingContext.GoToDetailsViewCommand, Source={RelativeSource AncestorType={x:Type ContentPage}}}"
+                                                          CommandParameter="{Binding .}" />
+                                </Grid.GestureRecognizers>
 
-                            <Image Grid.Column="0" WidthRequest="60" HeightRequest="60" Source="{Binding ImageSource}" Aspect="AspectFit"/>
+                                <Image Grid.Column="0" WidthRequest="60" HeightRequest="60" Source="{Binding ImageSource}" Aspect="AspectFit"/>
 
-                            <VerticalStackLayout Margin="20,10,10,10" Grid.Column="1">
-                                <Label Text="{Binding Title}" FontAttributes="Bold"/>
-                                <Label Text="{Binding Genre}" FontSize="12" TextColor="Gray"/>
-                            </VerticalStackLayout>
+                                <VerticalStackLayout Margin="20,10,10,10" Grid.Column="1">
+                                    <Label Text="{Binding Title}" FontAttributes="Bold"/>
+                                    <Label Text="{Binding Genre}" FontSize="12" TextColor="Gray"/>
+                                </VerticalStackLayout>
 
-                            <ImageButton Scale="0.5" Grid.Column="2" IsVisible="{Binding IsReaded}">
-                                <ImageButton.Source>
-                                    <FontImageSource FontFamily="MaterialIcons" Glyph="&#xe86c;" Color="#059669" Size="20"/>
-                                </ImageButton.Source>
-                            </ImageButton>
-                            <ImageButton Scale="0.5" Grid.Column="2" IsVisible="{Binding IsToRead}">
-                                <ImageButton.Source>
-                                    <FontImageSource FontFamily="MaterialIcons" Glyph="&#xe87d;" Color="#EF4444" Size="20"/>
-                                </ImageButton.Source>
-                            </ImageButton>
-                            <Button Grid.Column="3" 
+                                <Label FontFamily="MaterialIcons" 
+                                       Text="&#xe86c;" 
+                                        Grid.Column="2" 
+                                       IsVisible="{Binding IsReaded}" 
+                                       TextColor="#059669" 
+                                       VerticalOptions="Center"
+                                       Margin="0,0,20,0"/>
+                                
+                                <Label Grid.Column="2" 
+                                       IsVisible="{Binding IsToRead}" 
+                                       FontFamily="MaterialIcons" 
+                                       Text="&#xe87d;" 
+                                       TextColor="#EF4444"
+                                       VerticalOptions="Center"
+                                       Margin="0,0,20,0"/>
+
+                                <Label Grid.Column="3" 
+                                       VerticalOptions="Center">
+                                    <Label.FormattedText>
+                                        <FormattedString>
+                                            <Span Text="{Binding AverageRating}"/>
+                                            <Span Text="/5"/>
+                                        </FormattedString>
+                                    </Label.FormattedText>
+                                </Label>
+                                
+                                <Label Grid.Column="4"                                       
+                                       FontFamily="MaterialIcons" 
+                                       Text="&#xe838;" 
+                                       TextColor="Gold"
+                                       VerticalOptions="Center"/>
+                                
+                                <Button Grid.Column="5" 
                                     Command="{Binding BindingContext.ShowPopupCommand, Source={RelativeSource AncestorType={x:Type ContentPage}}}"
                                     CommandParameter="{Binding .}"
                                     BackgroundColor="Transparent">
-                                <Button.ImageSource>
-                                    <FontImageSource FontFamily="MaterialIcons" Glyph="&#xe8b8;" Color="#512BD4" Size="20"/>
-                                </Button.ImageSource>
-                            </Button>
-                        </Grid>
-                    </Border>
+                                    <Button.ImageSource>
+                                        <FontImageSource FontFamily="MaterialIcons" Glyph="&#xe5d4;" Color="{AppThemeBinding Light={DynamicResource Primary},Dark= {DynamicResource PrimaryDark}}" Size="20"/>
+                                    </Button.ImageSource>
+                                </Button>
+                            </Grid>
+                        </Border>
+                    </Grid>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
             <CollectionView.Footer>
