--- a/AplikacjaAndroid/Modules/Books/ToReadBook/ToReadBookView.xaml
+++ b/AplikacjaAndroid/Modules/Books/ToReadBook/ToReadBookView.xaml
@@ -16,39 +16,42 @@
         <CollectionView ItemsSource="{Binding ToReadBooks}" Grid.Row="1">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
-                    <Border Stroke="#ccc" 
+                    <Grid Shadow="4,4,2,gray">
+                        <Border Stroke="#ccc" 
                             Margin="10" 
                             Padding="10" 
-                            StrokeShape="RoundRectangle 10">
-                        <Grid ColumnDefinitions="Auto,*,Auto">
-                            <Grid.GestureRecognizers>
-                                <TapGestureRecognizer
+                            StrokeShape="RoundRectangle 10"
+                            BackgroundColor="{AppThemeBinding Dark={DynamicResource BackgroundDarkMode},Light={DynamicResource BackgroundLightMode}}">
+                            <Grid ColumnDefinitions="Auto,*,Auto">
+                                <Grid.GestureRecognizers>
+                                    <TapGestureRecognizer
                                     Command="{Binding BindingContext.GoToDetailsViewCommand, Source={RelativeSource AncestorType={x:Type ContentPage}}}"
                                     CommandParameter="{Binding .}" />
-                            </Grid.GestureRecognizers>
+                                </Grid.GestureRecognizers>
 
-                            <Image Grid.Column="0" WidthRequest="60" HeightRequest="60" Source="{Binding ImageSource}" Aspect="AspectFit"/>
+                                <Image Grid.Column="0" WidthRequest="60" HeightRequest="60" Source="{Binding ImageSource}" Aspect="AspectFit"/>
 
-                            <VerticalStackLayout Margin="20,10,10,10" Grid.Column="1">
-                                <Label Text="{Binding Title}" 
+                                <VerticalStackLayout Margin="20,10,10,10" Grid.Column="1">
+                                    <Label Text="{Binding Title}" 
                                        FontAttributes="Bold"/>
-                                <Label Text="{Binding Genre}" 
+                                    <Label Text="{Binding Genre}" 
                                        FontSize="12" 
                                        TextColor="Gray"/>
-                            </VerticalStackLayout>
-                            <Button BackgroundColor="Transparent"
+                                </VerticalStackLayout>
+                                <Button BackgroundColor="Transparent"
                                     Grid.Column="2" 
                                     Command="{Binding BindingContext.ShowPopupCommand, Source={RelativeSource AncestorType={x:Type ContentPage}}}"
                                     CommandParameter="{Binding .}">
-                                <Button.ImageSource>
-                                    <FontImageSource FontFamily="MaterialIcons" 
-                                                     Glyph="&#xe8b8;" 
-                                                     Color="#512BD4" 
+                                    <Button.ImageSource>
+                                        <FontImageSource FontFamily="MaterialIcons" 
+                                                     Glyph="&#xe5d4;" 
+                                                     Color="{AppThemeBinding Light={DynamicResource Primary},Dark= {DynamicResource PrimaryDark}}" 
                                                      Size="20"/>
-                                </Button.ImageSource>
-                            </Button>
-                        </Grid>
-                    </Border>
+                                    </Button.ImageSource>
+                                </Button>
+                            </Grid>
+                        </Border>
+                    </Grid>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
